# birl_xsens

./: CMakeLists.txt  log  package.xml  readme.md
dataset/xsens_data/: 2018-06-06-14-27-07.bag
dataset/xsens_data/.l/2018-06-06-14-27-07/: multiModal_states.csv
launch/: alvar_marker_demo.launch  baxter_xsens.launch  baxter_xtion.launch  baxter_xtion_cal_pub.launch  camera_base_tf_static.launch  marker_setup.launch
scripts/: 2018-05-28-17-34-45.bag  2018-05-28-17-37-31.bag  base_xsen_tf_transform.txt  birl_calibration_v2.py  error_test  xsen_test.py  xsens_calibration.py  xsens_skeleton_pub.py  xsens_tf_pub.py
skleaton_data/: 2018-05-28-19-55-59.bag
src/: header.h  position_data_tf_broadcaster.cpp  position_data_tf_broadcaster.cpp~  xsens_mvn_driver.cpp  xsens_mvn_driver.h
xsens_data/: 2018-06-06-14-23-46.bag  2018-06-06-14-39-43.bag
