<package>
  <name>birl_xsens</name>
  <version>1.2.0</version>
  <description>
    ROS device driver for Xsens.
  </description>
  <maintainer email="470963660@qq.com">Tony</maintainer>
  <author>Tony</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>


</package>


